# percona-server

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  MYSQL_VERSION  README.md  azure-pipelines.yml  config.h.cmake  configure.cmake  decrypt.cc  keyring_stubs.cc  saida.txt
build-ps/: percona-server.spec
build-ps/debian/: percona-server-server.postinst
build-ps/rpm/: mysql-5.7-sharedlib-rename.patch
client/: CMakeLists.txt  mysql.cc  mysqlbinlog.cc  mysqldump.cc  mysqltest.cc
cmake/: component.cmake  fido2.cmake
components/encryption_udf/: encryption_udf_component.cc
components/percona_telemetry/: data_provider.cc
extra/opensslpp/: CMakeLists.txt
include/: my_alloc.h  my_dbug.h  my_sys.h  priority_queue.h  sql_string.h
include/mysql/: service_thd_wait.h
man/: mysqldumpslow.1
mysql-test/: mysql-test-run.pl
mysql-test/collections/: disabled.def
mysql-test/include/: check-testcase.test  common-tests.inc  mtr_check.sql  plugin_auth_check_non_default_users.inc  start_mysqld.inc  wait_until_connected_again.inc
mysql-test/lib/: mtr_cases.pm
mysql-test/r/: func_uuid.result  initialize-bug20350099.result  initialize-sha256.result  initialize.result  olap.result  persisted_variables_bugs.result  plugin_auth_qa.result  plugin_auth_qa_1.result  plugin_auth_qa_2.result  plugin_auth_sha256.result  plugin_auth_sha256_2.result  plugin_auth_sha256_server_default.result  transactional_acl_tables.result  (+2 more)
mysys/: my_alloc.cc
share/: messages_to_clients.txt  messages_to_error_log.txt
sql/: CMakeLists.txt  binlog.cc  cmp_varlen_keys.h  dd_table_share.cc  debug_sync.cc  field.cc  field.h  field_conv.cc  filesort.cc  filesort.h  handler.cc  handler.h  item.cc  item.h  item_cmpfunc.cc  item_cmpfunc.h  item_func.cc  item_func.h  item_geofunc.h  item_inetfunc.h  item_json_func.h  item_pfs_func.h  item_regexp_func.h  item_row.h  item_strfunc.h  item_subselect.cc  item_sum.cc  item_sum.h  item_timefunc.h  item_xmlfunc.h  lex.h  log_event.cc  log_event.h  mdl.cc  mysqld.cc  mysqld.h  opt_explain.cc  opt_explain_format.h  opt_explain_json.cc  opt_explain_json.h  (+60 more)
sql-common/: client.cc  net_serv.cc
storage/cslog/: CMakeLists.txt  ha_cslog.cc  ha_cslog.h
testclients/: CMakeLists.txt  mysql_client_test.cc
utilities/: CMakeLists.txt  innochecksum.cc
(+584 files in other folders)
